# FluidSolver

./: CMakeLists.txt  README.md
src/: colliders.h  flip_solver.cpp  flip_solver.h  main.cpp  renderer.cpp  renderer.h  vec2.h
tests/: solver_tests.cpp
